--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;1,300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./Css/diseño.css">   
-<link rel="stylesheet" href="./Css/normalize.css">
+
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         </ul>
     </nav>
 
-    <main>
+<main>
 
 
     <div class="columnas"> 
@@ -37,7 +37,8 @@
            <h2> Bienvenidos </h2>
            <p>En nuestra pagina vas a poder encontrar gran variedad de libros de generos diversos al mejor precio. Podes realizar tu compra online y retirar por nuestro local, y también tenemos envios a domicilio por Correo Argentino a todo el país. Estamos ubicados sobre la calle Lavalle 3000 ¡Te esperamos!</p>
     </div>
-<img src="imagenes/foto libros inicio.jpg" width="2000"  alt="foto libros">
+
+ <img src="./imagenes/foto libros inicio.jpg"  alt="foto libros">
 
 <div class="columnas"> 
     <section class="testimonios">
@@ -56,8 +57,7 @@
         </p>
     </footer>
 
- <script src="/scripts/main.js"></script>
-
+<script src="./scripts/main.js"></script>
 </body>
 </html>
 
